# rlstatsapi

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  rpc.py  sitemap.xml  test.py  test2.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: docs.yml  pylint.yml  release.yml
api/: index.html
compatibility/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  compatibility.md  configuration.md  contributing.md  events.md  examples.md  index.md  installation.md  quickstart.md  recipes.md  security.md  typing.md  videos.md
docs/stylesheets/: extra.css
events/: index.html
examples/: README.md  all_events_to_txt.py  clock_updates.py  configure_and_connect.py  decorator_handlers.py  event_names_only.py  goal_scored_typed.py  index.html  live_scoreboard.py  match_lifecycle.py  statfeed_events.py
installation/: index.html
quickstart/: index.html
recipes/: index.html
rpc/: README.md  __init__.py  discord_ipc.py  presence_mapper.py  run.py
search/: search_index.json
security/: index.html
src/rlstatsapi/: __init__.py  __main__.py  _websocket.py  client.py  config.py  events.py  models.py  state.py  types.py
tests/: test_client.py  test_client_unit.py  test_config.py
typing/: index.html
videos/: index.html
