[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlstatsapi"
version = "0.1.6"
description = "Rocket League Stats API client"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Manuel Cabral" }]
keywords = ["rocket-league", "stats", "socket", "asyncio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/manucabral/RocketLeagueStatsAPI"
Repository = "https://github.com/manucabral/RocketLeagueStatsAPI"
"Bug Tracker" = "https://github.com/manucabral/RocketLeagueStatsAPI/issues"

[project.scripts]
rlstatsapi = "rlstatsapi.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "black"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a live Rocket League exporter to be running",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rlstatsapi = ["py.typed"]
